--- a/app/components/home/homeView.html
+++ b/app/components/home/homeView.html
@@ -7,7 +7,7 @@
 
     <button ng-click="getCategories(designId)" type="button" class="btn btn-sm btn-primary">Refresh</button>
 
-    <ul>
+   <!--  <ul>
       <li ng-repeat="category in categoryDefinition">
         <span><a ng-click="displayImages(category.categoryId)">{{category.categoryName}}</a></span>
           <ul>
@@ -16,9 +16,49 @@
           </li> 
           </ul>             
       </li>
-    </ul>
+    </ul> -->
 
-   
+    <!-- Nested list template -->
+              <script type="text/ng-template" id="items_renderer.html">
+                <div ui-tree-handle>
+                  <a class="btn btn-default btn-xs" data-nodrag ng-click="uiTreeToggle(this)"><span class="glyphicon" ng-class="{'glyphicon-chevron-right': collapsed, 'glyphicon-chevron-down': !collapsed}"></span></a>
+                  {{item.categoryName}}
+                  <a class="pull-right btn btn-default btn-xs" data-nodrag ng-click="remove(this)"><span class="glyphicon glyphicon-remove"></span></a>
+                  <a class="pull-right btn btn-default btn-xs" data-nodrag ng-click="newSubItem(this)" style="margin-right: 8px;"><span class="glyphicon glyphicon-plus"></span></a>
+                </div>
+                <ol ui-tree-nodes="options" ng-model="item.categoryList" ng-class="{hidden: collapsed}">
+                  <li ng-repeat="item in item.categoryList" ui-tree-node ng-include="'items_renderer.html'">
+                  </li>
+                </ol>
+              </script>
+              <div ui-tree="options">
+                <ol ui-tree-nodes ng-model="categoryDefinition" >
+                  <li ng-repeat="item in categoryDefinition" ui-tree-node ng-include="'items_renderer.html'"></li>
+                </ol>
+              </div>
+
+    <script type="text/ng-template" id="nodes_renderer2.html">
+      <div class="tree-node">
+        <div class="pull-left tree-handle" ui-tree-handle>
+          <span class="glyphicon glyphicon-list"></span>
+        </div>
+        <div class="tree-node-content">
+          <a class="btn btn-default btn-xs" data-nodrag ng-click="uiTreeToggle(this)"><span class="glyphicon" ng-class="{'glyphicon-chevron-right': collapsed, 'glyphicon-chevron-down': !collapsed}"></span></a>
+          {{item.categoryName}}
+          <a class="pull-right btn btn-default btn-xs" data-nodrag ng-click="remove(this)"><span class="glyphicon glyphicon-remove"></span></a>
+          <a class="pull-right btn btn-default btn-xs" data-nodrag ng-click="newSubItem(this)" style="margin-right: 8px;"><span class="glyphicon glyphicon-plus"></span></a>
+        </div>
+      </div>
+      <ol ui-tree-nodes="" ng-model="item.categoryList" ng-class="{hidden: collapsed}">
+        <li ng-repeat="item in item.categoryList" ui-tree-node ng-include="'nodes_renderer2.html'">
+        </li>
+      </ol>
+    </script>
+   <div ui-tree id="tree2-root">
+          <ol ui-tree-nodes="" ng-model="categoryDefinition">
+            <li ng-repeat="item in categoryDefinition" ui-tree-node ng-include="'nodes_renderer2.html'"></li>
+          </ol>
+        </div>
 
   </div>
 
