add bootstrap local resources to get around proxy issues

--- a/app/components/uiTree/uiTreeView.html
+++ b/app/components/uiTree/uiTreeView.html
@@ -14,7 +14,7 @@
                   <a class="btn btn-default btn-xs" data-nodrag ng-click="uiTreeToggle(this)"><span class="glyphicon" ng-class="{'glyphicon-chevron-right': collapsed, 'glyphicon-chevron-down': !collapsed}"></span></a>
                   {{item.title}}
                   <a class="pull-right btn btn-default btn-xs" data-nodrag ng-click="remove(this)"><span class="glyphicon glyphicon-remove"></span></a>
-                  <a class="pull-right btn btn-default btn-xs" data-nodrag ng-click="newSubItem(this)" style="margin-right: 8px;"><span class="glyphicon glyphicon-plus"></span></a>
+                  <a class="pull-right btn btn-default btn-xs" data-nodrag ng-click="newSubItem_original(this)" style="margin-right: 8px;"><span class="glyphicon glyphicon-plus"></span></a>
                 </div>
                 <ol ui-tree-nodes="options" ng-model="item.items" ng-class="{hidden: collapsed}">
                   <li ng-repeat="item in item.items" ui-tree-node ng-include="'items_renderer.html'">
