--- a/assets/css/home-gallery.css
+++ b/assets/css/home-gallery.css
@@ -1,42 +1,3 @@
-
-    .wrap {
-       overflow: hidden;
-       margin: 10px;
-    }
-    .box {
-       float: left;
-       position: relative;
-       width: 15%;
-       padding-bottom: 15%;
-    }
-    .boxInner {
-       position: absolute;
-       left: 10px;
-       right: 10px;
-       top: 10px;
-       bottom: 10px;
-       overflow: hidden;
-    }
-    .boxInner img {
-       width: 100%;
-    }
-    .boxInner .titleBox {
-       position: absolute;
-       bottom: 0;
-       left: 0;
-       right: 0;
-       margin-bottom: -50px;
-       background: #000;
-       background: rgba(0, 0, 0, 0.5);
-       color: #FFF;
-       padding: 10px;
-       text-align: center;
-       -webkit-transition: all 0.3s ease-out;
-       -moz-transition: all 0.3s ease-out;
-       -o-transition: all 0.3s ease-out;
-       transition: all 0.3s ease-out;
-    }
-
     .boxSingle {
        width: 120px;
        height: 120px;
@@ -48,6 +9,8 @@
     }
 
      .boxCopy {
+       position: absolute;
+       z-index: 99999;
        width: 100px;
        height: 100px;
     }
@@ -55,6 +18,58 @@
     .boxCopy img {
        width: 100px;
        height: 100px;
+    }
+    .wrap {
+       overflow: hidden;
+       margin: 10px;
+    }
+    .box {
+       float: left;
+       position: relative;
+       width: 20%;
+       padding-bottom: 20%;
+    }
+    .boxInner {
+       position: absolute;
+       left: 10px;
+       right: 10px;
+       top: 10px;
+       bottom: 10px;
+       overflow: visible; 
+    }
+    .boxInner img {
+       width: 100%;
+       opacity: 1;
+    }
+    .boxInner .titleBox {
+       position: absolute;
+       bottom: 0;
+       left: 0;
+       right: 0;
+       background: #000;
+       background: rgba(0, 0, 0, 0.5);
+       color: #FFF;
+       padding: 10px;
+       text-align: center;
+       /*-webkit-transition: all 0.3s ease-out;
+       -moz-transition: all 0.3s ease-out;
+       -o-transition: all 0.3s ease-out;
+       transition: all 0.3s ease-out;*/
+    }
+
+    .boxInner .controlsBox {
+       position: absolute;
+       top: 0;
+       margin-bottom: 5px;
+       background: #000;
+       background: rgba(0, 0, 0, 0.5);
+       color: #FFF;
+       padding: 10px;
+       text-align: center;
+       /*-webkit-transition: all 0.3s ease-out;
+       -moz-transition: all 0.3s ease-out;
+       -o-transition: all 0.3s ease-out;
+       transition: all 0.3s ease-out;*/
     }
 
     body.no-touch .boxInner:hover .titleBox, body.touch .boxInner.touchFocus .titleBox {
