--- a/app/components/admin/adminView.html
+++ b/app/components/admin/adminView.html
@@ -2,7 +2,7 @@
 
 <div class="sideNav">
 	<div style="padding-bottom: 5px;">
-		<button type="button" class="btn btn-default" ng-click="loadConfig('layout')">Config</button>
+		<button type="button" class="btn btn-default" ng-click="loadConfig('layout')">Load</button>
   	</div>
 	<div style="padding-bottom: 5px;">
 		<button type="button" class="btn btn-default" ng-click="displayControls('layout')">Layout</button>
